--- a/marmelad/_blocks/article-content/article-content.styl
+++ b/marmelad/_blocks/article-content/article-content.styl
@@ -182,6 +182,29 @@
   &__container
     width: 100%
 
+  &__lid
+    font-size: 32px
+    line-height: 1.1
+    text-align: left
+    letter-spacing: 0
+    text-transform: none
+    max-width: 700px + 8px + 8px
+    width: 100%
+    padding-top: 15px
+    padding-right: 8px
+    padding-left: 8px
+    margin-right: auto
+    margin-left: auto
+
+    @media (max-width: 1439px)
+      margin-left: 0
+
+    @media (max-width: 1023px)
+      max-width: 100%
+
+    @media (max-width: 767px)
+      font-size: 24px
+
   &__content
     max-width: 700px + 8px + 8px
     width: 100%
@@ -207,7 +230,7 @@
     h3
       font-size: 28px
       color: #000
-      font-family: $fonts.textFont
+      font-family: 'Source Serif Pro', $fonts.textFont
       font-weight: 400
       line-height: 1.2
       margin-top: 0
@@ -219,7 +242,7 @@
     p
       font-size: 20px
       color: #000
-      font-family: $fonts.textFont
+      font-family: 'Source Serif Pro', $fonts.textFont
       font-weight: 400
       line-height: 1.3
       margin-top: 0
@@ -857,16 +880,19 @@
     flex: 0 0 300px
     width: 300px
     max-width: 300px
-    padding-top: 300px
-    display: none
+    padding-top: 20px
+    margin-left: 50px
 
     @media (min-width: 1440px)
       margin-left: -300px
       transform: translateX(200px)
       display: block
 
+    @media (max-width: 1023px)
+      display: none
+
     .banner-block
-      @media (min-width: 1440px)
+      @media (min-width: 1024px)
         position: sticky
         top: 25px
         margin-bottom: 35px
@@ -876,7 +902,7 @@
     display: none
     margin-bottom: 35px
 
-    @media (max-width: 1439px)
+    @media (max-width: 1023px)
       display: block
 
 .gallery
