--- a/marmelad/_blocks/article-thumb/article-thumb.styl
+++ b/marmelad/_blocks/article-thumb/article-thumb.styl
@@ -122,6 +122,10 @@
     display: flex
     flex-direction: column
     position: relative
+    padding: 0 25px
+
+    @media (max-width: 639px)
+      padding: 0
 
     &:before
       content: ''
