--- a/marmelad/styles/components/fonts.styl
+++ b/marmelad/styles/components/fonts.styl
@@ -33,7 +33,7 @@
   font-weight: 500;
   font-style: normal;
   font-display: swap;
-  unicode-range: U+0040
+  unicode-range: U+0040, U+00A9
 }
 
 @font-face {
@@ -43,6 +43,6 @@
   font-weight: 400;
   font-style: normal;
   font-display: swap;
-  unicode-range: U+0040
+  unicode-range: U+0040, U+00A9
 }
 
